--- a/Assignment1.css
+++ b/Assignment1.css
@@ -1,11 +1,9 @@
 .submitting{
-  color: blue;
   background-color: yellow;
-  width: 100px;
-  height: 30px; 
+  background-position: 10%;
   font-size: 16px;
   border-radius: 16px;
-  border: 2px solid black;
+  border: 1px solid black;
   cursor: pointer;
 
 }
