--- a/block.css
+++ b/block.css
@@ -1,26 +1,10 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+padding:0;
+margin:0;
+display: block-inline;
 }
 header{
-  background: blue;
-  color: white;
+  background-color: lightblue;
   text-align: center;
   padding: 10px;
-  font-size: 24px;
-  font-weight: bold;
-
-}
-nav{
-  list-style: none;
-  
-}
-nav ul{
-
-  display: inline-flex;
-  justify-content: center;
-  background: greenyellow;
-  margin: 0px 10px;
-  font-size:18px;
 }
