--- a/assignment2.css
+++ b/assignment2.css
@@ -1,6 +1,6 @@
 * {
-  margin: 50;
-  padding: 50;
+  margin: 150;
+  padding: 150;
   box-sizing: border-box;
   font-family: "Times New Roman", Times, serif;
 }
@@ -9,7 +9,6 @@ h1{
   color: #040a0f;
   margin-bottom: 20px;
 }
-
 body {
   background: linear-gradient(to right, #9cc3f9, #f5b6d5);
   min-height: 20vh;
@@ -43,23 +42,19 @@ body {
   text-align: left;
   padding-right: 30px;
 }
-
 .contact-info h3 {
   color: #003366;
   margin-bottom: 20px;
   font-size: 3rem;
 }
-
 .info-item {
   margin-bottom: 20px;
 }
-
 .info-item h4 {
   color: hsl(268, 100%, 25%);
   margin-bottom: 5px;
   font-size: 1.5rem;
 }
-
 .social-icons a {
   display: inline-block;
   background: #226eb9;
@@ -71,7 +66,6 @@ body {
   font-weight: bold;
   transition: 0.3s;
 }
-
 .social-icons a:hover {
   background: #fd0404;
 }
@@ -80,13 +74,11 @@ body {
   min-width: 280px;
   text-align: left;
 }
-
 .contact-form h3 {
   color: #e23601;
   margin-bottom: 10px;
   font-size: 3rem;
 }
-
 .contact-form label {
   display: block;
   margin: 10px 0 5px;
@@ -99,9 +91,7 @@ body {
   padding: 10px;
   border: 1px solid #0e0c0c;
   border-radius: 10px;
-
 }
-
 .contact-form button {
   margin-top: 15px;
   padding: 12px 20px;
@@ -114,27 +104,29 @@ body {
   cursor: pointer;
   transition: 0.3s;
 }
-
 .contact-form button:hover {
   background: linear-gradient(to right, #d41d04, #01070e);
 }
-
 footer {
   background: #222;
-  margin-top: 5px;
+  margin-top: 2px;
   margin-left: 350px;
   margin-right: 350px;
-  color: #bbb;
+  color: #ffffff;
   text-align:center;
   padding: 15px;
   font-size: 15px;
   border-radius: 10px;
 }
 footer a {
-  color: #66ccff;
+  color: #f4f6f7;
   text-decoration: none;
-  margin: 5 5px;
+  margin:  5px;
+  background: linear-gradient(to left, #0804ec, #ff510d);
+  padding: 4px;
 }
 footer a:hover {
   text-decoration: underline;
+  text-decoration-color: #9c0afd;
+  background: linear-gradient(to right, #ff5a76, #af02af);
 }
