--- a/java script/button.css
+++ b/java script/button.css
@@ -1,6 +1,7 @@
 body{
   text-align: center;
 }
+/* }
 button{
   background: red;
   padding:20px 45px;
@@ -12,4 +13,36 @@ button{
 }
 button:hover{
   background: #262626;
+} */
+ button, #form input[type='submit']{
+  background: red;
+  padding: 20px 45px;
+  color: white;
+  font-size: 18px;
+  border-radius: 10px;
+  border: 0;
+  transition: 0.5s;
+  cursor: pointer;
+ }
+ button:hover, #form input[type='submit']:hover{
+  background: #262626;
+ }
+ #form{
+  width: 90%;
+  padding: 3%;
+ }
+ #form label{
+  display:block;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: left;
+ }
+ #form input, #form textarea{
+  width:90%;
+  padding: 10px 4%;
+}
+#form input[type='submit']{
+  width: 100%;
+  padding: 10px 4%;
+  margin-top: 10px;
 }
