--- a/Assignment LogIn Page/style.css
+++ b/Assignment LogIn Page/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: linear-gradient(135deg, #0e6bb8, #022c43);
+  background: linear-gradient(135deg, #ffa6c8, #ad6daa, #008bd6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,73 +13,55 @@ body {
 /* Login Box */
 .login-box {
   width: 100%;
-  max-width: 380px;                 /* Responsive width */
+  max-width: 380px;
   padding: 30px 25px;
-  background: #ffffff;
-  border-radius: 12px;
-  box-shadow: 0px 5px 20px rgba(0,0,0,0.25);
-  animation: fadeIn 0.4s ease-in-out;
+  background: linear-gradient( 45deg, #9467ff, #bcb0f3, #e6ffac, #4b3444);
+  border-radius: 15px;
+  border: 4px solid transparent;
+  box-shadow: 0px 5px 20px rgba(255, 34, 34, 0.25);
 }
-
 /* Heading */
 .login-box h3 {
   text-align: center;
   margin-bottom: 25px;
-  font-weight: 600;
-  color: #022c43;
+  font-weight: 1000;
+  color: #000000;
 }
 
 /* Input & Button spacing */
 .form-control {
   height: 45px;
-  border-radius: 8px;
+  border-radius: 15px;
   font-size: 15px;
+  background:#ffee01;
+  color: #093b55;      
+  font-weight: 500;
+}
+.form-label {
+  color: #000000;      
+  font-weight: 600;
+}
+.form-control::placeholder {
+  color: #fa2d2d;  
+  opacity: 0.55;              
 }
 
 .btn-primary {
   height: 45px;
   border-radius: 30px;
-  background: #0e6bb8;
+  background: #0062b3;
   border: none;
   font-size: 16px;
   transition: 0.3s;
 }
 
 .btn-primary:hover {
-  background: #084b83;
+  background: #00ce22;
 }
-
-/* Link design */
-.login-box p {
-  margin-top: 12px;
-  text-align: center;
-}
-
-.login-box a {
-  color: #0e6bb8;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.login-box a:hover {
-  color: #084b83;
-}
-
-/* Small screen adjustments */
 @media (max-width: 480px) {
   .login-box {
     padding: 25px 18px;
     margin: 15px;
     max-width: 100%;
   }
-
-  .login-box h3 {
-    font-size: 20px;
-  }
-}
-
-/* Smooth animation */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
 }
